--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.3.0
+numpy==1.23.5
+streamlit==1.22.0
+Pillow==9.5.0
+keras==2.12.0
+tensorflow==2.12.0
 pandas==1.3.5
-scikit-learn==0.24.2
-Pillow==8.4.0
+
