--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-numpy==1.23.5
-streamlit==1.22.0
-Pillow==9.5.0
-keras==2.12.0
-tensorflow==2.12.0
-pandas==1.3.5
-scikit-learn==0.24.2
+pip install streamlit
+pip install pandas
+pip install scikit-learn
+pip install Pillow
