--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install streamlit
-pip install pandas
-pip install scikit-learn
-pip install Pillow
+ streamlit
+ pandas
+ scikit-learn
+ Pillow
